--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -4,8 +4,6 @@ on:
     pull_request:
         branches:
             - main
-    issue_comment:
-        types: [created]
 
 permissions:
     contents: write
@@ -13,16 +11,10 @@ permissions:
 
 jobs:
     check-branch-status:
-        # Run this job only when a pull request is opened or an issue comment is created
-        if: |
-            github.event_name == 'pull_request' || 
-            (github.event_name == 'issue_comment' && 
-            github.event.issue.pull_request)
         runs-on: ubuntu-latest
         outputs:
             is_aifix: ${{ steps.check_branch.outputs.is_aifix }}
             should_create_pr: ${{ steps.check_pr.outputs.should_create_pr }}
-            feedback_comment: ${{ steps.get_feedback.outputs.comment }}
         steps:
             - name: Check if branch is AI-generated
               id: check_branch
@@ -33,31 +25,19 @@ jobs:
                   echo "is_aifix=false" >> $GITHUB_OUTPUT
                 fi
 
-            - name: Get Latest Feedback Comment
-              id: get_feedback
-              if: github.event_name == 'issue_comment'
-              run: |
-                if [[ "${{ github.event.comment.body }}" == *"[FEEDBACK]"* ]]; then
-                  echo "comment=${{ github.event.comment.body }}" >> $GITHUB_OUTPUT
-                  echo "Feedback comment found"
-                else
-                  echo "comment=" >> $GITHUB_OUTPUT
-                  echo "No feedback comment found"
-                fi
-
             - name: Check Pull Request Status
               id: check_pr
               if: steps.check_branch.outputs.is_aifix == 'true'
               run: |
                 # Get PR title
                 pr_title="${{ github.event.pull_request.title }}"
-                # Allow PR creation if there's feedback or if it's not an automated PR
-                if [[ "$pr_title" == "[AIFIX]"* && "${{ steps.get_feedback.outputs.comment }}" == "" ]]; then
+                # Allow PR creation if it's not an automated PR
+                if [[ "$pr_title" == "[AIFIX]"* ]]; then
                   echo "should_create_pr=false" >> $GITHUB_OUTPUT
-                  echo "This is an automated Pull Request without feedback. Preventing infinite loop."
+                  echo "This is an automated Pull Request. Preventing infinite loop."
                 else
                   echo "should_create_pr=true" >> $GITHUB_OUTPUT
-                  echo "Human changes or feedback detected, will create PR if needed"
+                  echo "Human changes detected, will create PR if needed"
                 fi
 
     run-tests:
@@ -103,7 +83,9 @@ jobs:
                 gh auth login --with-token <<< "${{ secrets.GITHUB_TOKEN }}"
                 if [[ "${{ steps.pytest_status.outputs.pytest_failed }}" == "true" ]]; then
                   gh pr comment "${{ github.event.pull_request.number }}" --body "⚠️ Tests failed for this AI fix ⚠️
-                  You can provide feedback for another attempt by commenting with '[FEEDBACK] your feedback here'."
+                  Further automated PRs will not be created to prevent infinite loops.
+                  You can implement manual fixes, but please ensure this PR is closed."
+                  You can also provide feedback for another attempt by commenting with '[FEEDBACK] your feedback here'."
                 else
                   gh pr comment "${{ github.event.pull_request.number }}" --body "✅ Tests passed successfully! The AI-assisted fixes have resolved the issues."
                 fi
@@ -137,8 +119,8 @@ jobs:
     update-implementation:
         needs: [check-branch-status, run-tests]
         if: |
-          (needs.run-tests.outputs.pytest_failed == 'true' && needs.check-branch-status.outputs.is_aifix == 'false') ||
-          (needs.check-branch-status.outputs.feedback_comment != '' && needs.check-branch-status.outputs.is_aifix == 'true')
+          needs.run-tests.outputs.pytest_failed == 'true' ||
+          (needs.check-branch-status.outputs.is_aifix == 'true' && needs.check-branch-status.outputs.should_create_pr == 'true')
         runs-on: ubuntu-latest
         steps:
             - name: Checkout repository
@@ -178,13 +160,9 @@ jobs:
                 target-branch: ${{ steps.read_branch.outputs.target_branch }}
                 github-token: ${{ secrets.GITHUB_TOKEN }}
                 commit-message: "[AIFIX] fix for failed tests"
-                feedback: ${{ needs.check-branch-status.outputs.feedback_comment }}
             
             - name: Create Pull Request
-              if: |
-                needs.check-branch-status.outputs.is_aifix == 'false' || 
-                (needs.check-branch-status.outputs.is_aifix == 'true' && 
-                needs.check-branch-status.outputs.should_create_pr == 'true')
+              if: needs.check-branch-status.outputs.is_aifix == 'false'
               run: |
                 gh auth login --with-token <<< "${{ secrets.PAT_TOKEN }}"
                 gh pr create \
