--- a/.github/workflows/aifeedback.yml
+++ b/.github/workflows/aifeedback.yml
@@ -5,6 +5,8 @@ on:
         types: [created]
     pull_request:
         types: [opened]
+    pull_request_review_comment:
+        types: [created]
 
 permissions:
     contents: write
@@ -14,8 +16,8 @@ permissions:
 jobs:
     process-feedback:
         if: |
-            github.event.issue.pull_request && 
-            contains(github.event.comment.body, '[FEEDBACK]')
+            (github.event_name == 'issue_comment' && github.event.issue.pull_request && contains(github.event.comment.body, '[FEEDBACK]')) ||
+            (github.event_name == 'pull_request_review_comment' && contains(github.event.comment.body, '[FEEDBACK]'))
         runs-on: ubuntu-latest
         steps:
             - name: Checkout repository
