--- a/.github/workflows/aifeedback.yml
+++ b/.github/workflows/aifeedback.yml
@@ -5,8 +5,6 @@ on:
         types: [created]
     pull_request:
         types: [opened]
-    pull_request_review_comment:
-        types: [created]
 
 permissions:
     contents: write
@@ -15,15 +13,21 @@ permissions:
 
 jobs:
     process-feedback:
-        if: |
-            (github.event_name == 'issue_comment' && github.event.issue.pull_request && contains(github.event.comment.body, '[FEEDBACK]')) ||
-            (github.event_name == 'pull_request_review_comment' && contains(github.event.comment.body, '[FEEDBACK]'))
+        if: ${{ github.event.issue.pull_request && contains(github.event.comment.body, '[FEEDBACK]') }}
         runs-on: ubuntu-latest
         steps:
             - name: Checkout repository
               uses: actions/checkout@v4
               with:
                 fetch-depth: 0
+
+            - name: Get PR information
+              id: get_pr_info
+              uses: octokit/request-action@v2.x
+              with:
+                route: ${{ github.event.issue.pull_request.url }}
+              env:
+                GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
             - name: Get PR branch
               id: get_pr_branch
