--- a/action.yml
+++ b/action.yml
@@ -14,6 +14,9 @@ inputs:
     description: 'User feedback from PR comments'
     required: false
     default: 'Run instructions'
+  report-path:
+    description: 'Path to the pytest report file'
+    required: true
 runs:
   using: 'node16'
   main: 'dist/index.js'
